work on prepping for merges

--- a/FE-VR-C/ImportMerge.ipynb
+++ b/FE-VR-C/ImportMerge.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "ac5a3ba0",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "92b4e384",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "1f5e2f9d",
    "metadata": {},
    "outputs": [
@@ -103,6 +103,102 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "2d0c7670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' Drop Unneeded Columns and Rename Needed Columns if Needed'''\n",
+    "fueleconomy = fueleconomy.iloc[:, :6]\n",
+    "registrations = registrations.iloc[:, :4]\n",
+    "consumption = consumption.iloc[:, :2]\n",
+    "consumption.columns = [\"Date\", \"Gasoline_Consumption(Millions of Gallons)\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "34a8885d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' Converting Consumption data to Years '''\n",
+    "\n",
+    "# convert consumption tp yearly and sum up values\n",
+    "consumption = consumption.rename(columns = {'Date' : 'Year'})\n",
+    "consumption = (consumption.groupby('Year', as_index=False)['Gasoline_Consumption(Millions of Gallons)']).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c41520f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fueleconomy = (fueleconomy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6c163ed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 324 entries, 0 to 323\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column                                     Non-Null Count  Dtype         \n",
+      "---  ------                                     --------------  -----         \n",
+      " 0   Year                                       324 non-null    datetime64[ns]\n",
+      " 1   Gasoline_Consumption(Millions of Gallons)  324 non-null    float64       \n",
+      "dtypes: datetime64[ns](1), float64(1)\n",
+      "memory usage: 5.2 KB\n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 27 entries, 7 to 33\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column        Non-Null Count  Dtype         \n",
+      "---  ------        --------------  -----         \n",
+      " 0   Year          27 non-null     datetime64[ns]\n",
+      " 1   Car           27 non-null     float64       \n",
+      " 2   Car SUV       27 non-null     float64       \n",
+      " 3   Pickup truck  27 non-null     float64       \n",
+      " 4   Van           27 non-null     float64       \n",
+      " 5   Truck SUV     27 non-null     float64       \n",
+      "dtypes: datetime64[ns](1), float64(5)\n",
+      "memory usage: 1.5 KB\n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 27 entries, 0 to 26\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                    Non-Null Count  Dtype         \n",
+      "---  ------                    --------------  -----         \n",
+      " 0   Year                      27 non-null     datetime64[ns]\n",
+      " 1   Automobile_Registrations  27 non-null     float64       \n",
+      " 2   Motorcycle_Registrations  27 non-null     float64       \n",
+      " 3   Licensed_Drivers          27 non-null     float64       \n",
+      "dtypes: datetime64[ns](1), float64(3)\n",
+      "memory usage: 996.0 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "consumption.info()\n",
+    "print(\"\\n\")\n",
+    "fueleconomy.info()\n",
+    "print(\"\\n\")\n",
+    "registrations.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1c993b47",
    "metadata": {},
@@ -115,34 +211,54 @@
    "id": "fe59071d",
    "metadata": {},
    "source": [
-    "# Not changed"
+    "# in progress "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "0ac8d351",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Nominal_Price_USD'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/homebrew/Caskroom/miniconda/base/envs/py38/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mKeyError\u001b[39m: 'Nominal_Price_USD'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 25\u001b[39m\n\u001b[32m     19\u001b[39m merged_df.rename(columns={\n\u001b[32m     20\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mDollars_Per_Gallon\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mNominal_Price_USD\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     21\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mprice_adjusted\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mInflation_Adjusted_Price_USD\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     22\u001b[39m }, inplace=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# Round values for cleaner display\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m merged_df[\u001b[33m\"\u001b[39m\u001b[33mNominal_Price_USD\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[43mmerged_df\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mNominal_Price_USD\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m.round(\u001b[32m3\u001b[39m)\n\u001b[32m     26\u001b[39m merged_df[\u001b[33m\"\u001b[39m\u001b[33mInflation_Adjusted_Price_USD\u001b[39m\u001b[33m\"\u001b[39m] = merged_df[\u001b[33m\"\u001b[39m\u001b[33mInflation_Adjusted_Price_USD\u001b[39m\u001b[33m\"\u001b[39m].round(\u001b[32m3\u001b[39m)\n\u001b[32m     28\u001b[39m \u001b[38;5;66;03m# Add time breakdowns\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/homebrew/Caskroom/miniconda/base/envs/py38/lib/python3.12/site-packages/pandas/core/frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/homebrew/Caskroom/miniconda/base/envs/py38/lib/python3.12/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-      "\u001b[31mKeyError\u001b[39m: 'Nominal_Price_USD'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Year  Gasoline_Consumption(Millions of Gallons)    Car  Car SUV  \\\n",
+      "17 2012-01-01                                  10663.926  27.60    23.29   \n",
+      "18 2013-01-01                                  10847.088  28.36    24.34   \n",
+      "19 2014-01-01                                  10772.034  28.39    24.44   \n",
+      "20 2015-01-01                                  11248.104  29.01    25.14   \n",
+      "21 2016-01-01                                  11266.584  29.21    26.21   \n",
+      "22 2017-01-01                                  11075.736  30.18    26.14   \n",
+      "23 2018-01-01                                  11441.430  30.76    27.33   \n",
+      "24 2019-01-01                                  11429.460  30.88    27.49   \n",
+      "25 2020-01-01                                  11358.060  31.73    28.38   \n",
+      "26 2021-01-01                                  10055.766  31.73    30.50   \n",
+      "\n",
+      "    Pickup truck    Van  Truck SUV  Automobile_Registrations  \\\n",
+      "17         17.21  21.27      20.01              1.112899e+08   \n",
+      "18         17.47  21.06      20.83              1.136763e+08   \n",
+      "19         18.04  21.27      21.59              1.138988e+08   \n",
+      "20         18.81  21.78      21.94              1.128642e+08   \n",
+      "21         18.92  21.66      22.21              1.129613e+08   \n",
+      "22         18.92  22.23      22.34              1.111770e+08   \n",
+      "23         19.11  22.76      23.13              1.112421e+08   \n",
+      "24         19.03  22.43      23.48              1.085477e+08   \n",
+      "25         19.19  23.35      23.75              1.051353e+08   \n",
+      "26         19.40  26.21      24.00              1.029739e+08   \n",
+      "\n",
+      "    Motorcycle_Registrations  Licensed_Drivers  \n",
+      "17                8454939.00      2.118148e+08  \n",
+      "18                8404687.00      2.121597e+08  \n",
+      "19                8417717.50      2.140925e+08  \n",
+      "20                8600936.00      2.180845e+08  \n",
+      "21                8679380.00      2.219944e+08  \n",
+      "22                8664108.00      2.253463e+08  \n",
+      "23                8659741.13      2.275584e+08  \n",
+      "24                8596313.89      2.286797e+08  \n",
+      "25                8347435.00      2.281958e+08  \n",
+      "26                9881414.00      2.327818e+08  \n"
      ]
     }
    ],
@@ -150,12 +266,20 @@
     "''' Merge consumption and prices data on Date '''\n",
     "\n",
     "# Normalize and align Date columns just in case\n",
-    "consumption[\"Date\"] = pd.to_datetime(consumption[\"Date\"]).dt.tz_localize(None).dt.normalize()\n",
-    "prices[\"Date\"] = pd.to_datetime(prices[\"Date\"]).dt.tz_localize(None).dt.normalize()\n",
+    "consumption[\"Year\"] = pd.to_datetime(consumption[\"Year\"]).dt.tz_localize(None).dt.normalize()\n",
+    "fueleconomy[\"Year\"] = pd.to_datetime(fueleconomy[\"Year\"]).dt.tz_localize(None).dt.normalize()\n",
+    "registrations[\"Year\"] = pd.to_datetime(registrations[\"Year\"]).dt.tz_localize(None).dt.normalize()\n",
     "\n",
-    "# Merge consumption and price data\n",
-    "merged_df = pd.merge(consumption, prices, on=\"Date\", how=\"inner\")\n",
+    "# Merge consumption and fueleconomy data\n",
+    "merged_df = pd.merge(consumption, fueleconomy, on=\"Year\", how=\"inner\")\n",
+    "merged_df = pd.merge(merged_df, registrations, on=\"Year\", how=\"inner\")\n",
     "\n",
+    "# ------^  edited ^------#\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "'''\n",
     "# Keep only relevant columns\n",
     "merged_df = merged_df[[\n",
     "    \"Date\",\n",
@@ -177,6 +301,8 @@
     "# Add time breakdowns\n",
     "merged_df[\"Year\"] = merged_df[\"Date\"].dt.year\n",
     "merged_df[\"Month\"] = merged_df[\"Date\"].dt.month_name()\n",
+    "\n",
+    "'''\n",
     "\n",
     "# Verify output\n",
     "print(merged_df.tail(10))"
