--- a/FuelPrices/FuelPrices.ipynb
+++ b/FuelPrices/FuelPrices.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 81,
       "metadata": {
         "id": "WpqLDmNMArDK"
       },
@@ -37,7 +37,9 @@
         "import statsmodels.api as sm\n",
         "from scipy.stats import skew, kurtosis\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "import glob, os"
+        "import glob, os\n",
+        "from datetime import datetime\n",
+        "import pandas_datareader.data as web"
       ]
     },
     {
@@ -51,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 82,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -151,7 +153,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "37c5a623-5200-4d3c-b9d0-ffc277c19ce1",
+              "ref": "ee202c1a-bfd6-43c2-85cc-827afcb6a462",
               "rows": [
                 [
                   "0",
@@ -505,7 +507,7 @@
               "4                                                NaN                            "
             ]
           },
-          "execution_count": 32,
+          "execution_count": 82,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -537,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 83,
       "metadata": {
         "id": "fK21PZKVC_wW"
       },
@@ -557,7 +559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 84,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -603,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 85,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -638,7 +640,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "5050a254-3cee-4342-8367-ca4183590479",
+              "ref": "22458294-82ca-45d3-8067-11a36c8dd859",
               "rows": [
                 [
                   "53",
@@ -809,7 +811,7 @@
               "62 1995-10-01           1.134         1.115"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 85,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -844,7 +846,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 86,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -879,7 +881,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "1d9a43e4-03db-4145-9232-75e891814306",
+              "ref": "68593b9d-2aed-45d6-b4ce-1a416424c7e4",
               "rows": [
                 [
                   "count",
@@ -1024,7 +1026,7 @@
               "std                              NaN        0.859399      0.997167"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 86,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1035,7 +1037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 87,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1074,7 +1076,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 88,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1112,7 +1114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 89,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1145,7 +1147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 90,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2039,7 +2041,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 91,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2081,7 +2083,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "4d5fb124-79c0-444d-a358-a57bb96c9deb",
+              "ref": "04fad655-baed-4f55-b0e3-6d33bd6edfba",
               "rows": [],
               "shape": {
                 "columns": 3,
@@ -3007,7 +3009,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 92,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3040,7 +3042,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 93,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3934,7 +3936,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 94,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3976,7 +3978,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "ab922f2f-39de-4d27-b9a6-2b57807a302b",
+              "ref": "962b4f7b-aaaf-4ddd-bbe1-23edd6378f15",
               "rows": [],
               "shape": {
                 "columns": 3,
@@ -4902,7 +4904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 95,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6464,12 +6466,55 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# Inflation Conversion"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "''' Fetch CPI data from FRED to adjust prices for inflation'''\n",
+        "\n",
+        "# set start and end dates for data retrieval\n",
+        "start = datetime(1994, 1, 1)\n",
+        "end = datetime(2025, 1, 1)\n",
+        "\n",
+        "# Fetch CPI data from FRED (All Urban Consumers, base period 1982-84=100)\n",
+        "cpi = web.DataReader('CPIAUCNS', 'fred', start, end)\n",
+        "\n",
+        "# Reset index for merging\n",
+        "cpi.reset_index(inplace=True)\n",
+        "cpi.columns = ['Date', 'CPI']\n",
+        "\n",
+        "# Merge based on month\n",
+        "prices[\"Date\"] = pd.to_datetime(prices[\"Date\"]).dt.tz_localize(None).dt.normalize()\n",
+        "cpi[\"Date\"]    = pd.to_datetime(cpi[\"Date\"]).dt.tz_localize(None).dt.normalize()\n",
+        "\n",
+        "# Merge CPI into prices on Date\n",
+        "prices = pd.merge(prices, cpi, on=\"Date\", how=\"left\")\n",
+        "\n",
+        "# Get CPI for the most recent month\n",
+        "latest_cpi = prices[\"CPI\"].iloc[-1]\n",
+        "\n",
+        "# Compute inflation-adjusted price (2024 dollars)\n",
+        "prices[\"price_adjusted\"] = prices[\"Dollars_Per_Gallon\"] * (latest_cpi / prices[\"CPI\"])\n",
+        "\n",
+        "# Drop CPI column (no longer needed)\n",
+        "prices.drop(columns=[\"CPI\"], inplace=True)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Export"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
