added inflation conversion to FuelPrices

--- a/FuelPrices/FuelPrices.ipynb
+++ b/FuelPrices/FuelPrices.ipynb
@@ -6496,13 +6496,17 @@
         "prices = pd.merge(prices, cpi, on=\"Date\", how=\"left\")\n",
         "\n",
         "# Get CPI for the most recent month\n",
-        "latest_cpi = prices[\"CPI\"].iloc[-1]\n",
+        "latest_cpi = prices[\"CPI\"].dropna().iloc[-1]\n",
         "\n",
-        "# Compute inflation-adjusted price (2024 dollars)\n",
-        "prices[\"price_adjusted\"] = prices[\"Dollars_Per_Gallon\"] * (latest_cpi / prices[\"CPI\"])\n",
+        "# Compute inflation-adjusted prices (2024 dollars)\n",
+        "prices[\"GasolinePrices_Adjusted\"] = prices[\"GasolinePrices\"] * (latest_cpi / prices[\"CPI\"])\n",
+        "prices[\"DieselPrices_Adjusted\"] = prices[\"DieselPrices\"] * (latest_cpi / prices[\"CPI\"])\n",
         "\n",
-        "# Drop CPI column (no longer needed)\n",
-        "prices.drop(columns=[\"CPI\"], inplace=True)\n"
+        "# Drop CPI column (no longer needed after calculations)\n",
+        "prices.drop(columns=[\"CPI\"], inplace=True)\n",
+        "\n",
+        "# remove Z_Gasoline_Prices and Z_Diesel_Prices\n",
+        "prices.drop(columns=[\"Z_Gasoline_Prices\", \"Z_Diesel_Prices\"], inplace=True)"
       ]
     },
     {
