--- a/FEVRC_Analysos/ImportMerge.ipynb
+++ b/FEVRC_Analysos/ImportMerge.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "ac5a3ba0",
    "metadata": {},
    "outputs": [],
@@ -29,19 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "92b4e384",
    "metadata": {},
    "outputs": [],
    "source": [
     "fueleconomy = pd.read_pickle(\"../FuelEconomy/cleanedfueleconomy.pkl\")\n",
     "registrations = pd.read_pickle(\"../VehicleRegistrations/cleanedregistrations.pkl\")\n",
-    "consumption = pd.read_pickle(\"../ConsumptionData/cleanedconsumption.pkl\")"
+    "consumption = pd.read_pickle(\"../FuelConsumption/cleanedconsumption.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
+   "id": "7bdab3cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' Drop Unneeded Columns and Rename Needed Columns if Needed'''\n",
+    "fueleconomy = fueleconomy.iloc[:, :6]\n",
+    "registrations = registrations.iloc[:, :4]\n",
+    "consumption = consumption.iloc[:, :2]\n",
+    "consumption.columns = [\"Date\", \"Gasoline_Consumption(Millions of Gallons)\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "1f5e2f9d",
    "metadata": {},
    "outputs": [
@@ -51,46 +65,41 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 324 entries, 600 to 923\n",
-      "Data columns (total 3 columns):\n",
+      "Data columns (total 2 columns):\n",
       " #   Column                                     Non-Null Count  Dtype         \n",
       "---  ------                                     --------------  -----         \n",
       " 0   Date                                       324 non-null    datetime64[ns]\n",
       " 1   Gasoline_Consumption(Millions of Gallons)  324 non-null    float64       \n",
-      " 2   Z_Consumption                              324 non-null    float64       \n",
-      "dtypes: datetime64[ns](1), float64(2)\n",
-      "memory usage: 10.1 KB\n",
+      "dtypes: datetime64[ns](1), float64(1)\n",
+      "memory usage: 7.6 KB\n",
       "\n",
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 27 entries, 7 to 33\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column         Non-Null Count  Dtype         \n",
-      "---  ------         --------------  -----         \n",
-      " 0   Year           27 non-null     datetime64[ns]\n",
-      " 1   Car            27 non-null     float64       \n",
-      " 2   Car SUV        27 non-null     float64       \n",
-      " 3   Pickup truck   27 non-null     float64       \n",
-      " 4   Van            27 non-null     float64       \n",
-      " 5   Truck SUV      27 non-null     float64       \n",
-      " 6   Z_fueleconomy  27 non-null     float64       \n",
-      "dtypes: datetime64[ns](1), float64(6)\n",
-      "memory usage: 1.7 KB\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column        Non-Null Count  Dtype         \n",
+      "---  ------        --------------  -----         \n",
+      " 0   Year          27 non-null     datetime64[ns]\n",
+      " 1   Car           27 non-null     float64       \n",
+      " 2   Car SUV       27 non-null     float64       \n",
+      " 3   Pickup truck  27 non-null     float64       \n",
+      " 4   Van           27 non-null     float64       \n",
+      " 5   Truck SUV     27 non-null     float64       \n",
+      "dtypes: datetime64[ns](1), float64(5)\n",
+      "memory usage: 1.5 KB\n",
       "\n",
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 27 entries, 0 to 26\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column                      Non-Null Count  Dtype         \n",
-      "---  ------                      --------------  -----         \n",
-      " 0   Year                        27 non-null     datetime64[ns]\n",
-      " 1   Automobile_Registrations    27 non-null     float64       \n",
-      " 2   Motorcycle_Registrations    27 non-null     float64       \n",
-      " 3   Licensed_Drivers            27 non-null     float64       \n",
-      " 4   Z_automobile_registrations  27 non-null     float64       \n",
-      " 5   Z_motorcycle_registrations  27 non-null     float64       \n",
-      " 6   Z_licensed_drivers          27 non-null     float64       \n",
-      "dtypes: datetime64[ns](1), float64(6)\n",
-      "memory usage: 1.6 KB\n"
+      "Data columns (total 4 columns):\n",
+      " #   Column                    Non-Null Count  Dtype         \n",
+      "---  ------                    --------------  -----         \n",
+      " 0   Year                      27 non-null     datetime64[ns]\n",
+      " 1   Automobile_Registrations  27 non-null     float64       \n",
+      " 2   Motorcycle_Registrations  27 non-null     float64       \n",
+      " 3   Licensed_Drivers          27 non-null     float64       \n",
+      "dtypes: datetime64[ns](1), float64(3)\n",
+      "memory usage: 996.0 bytes\n"
      ]
     }
    ],
@@ -104,43 +113,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2d0c7670",
+   "execution_count": 45,
+   "id": "056df28e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.int32(1995), np.int32(1996), np.int32(1997), np.int32(1998), np.int32(1999), np.int32(2000), np.int32(2001), np.int32(2002), np.int32(2003), np.int32(2004), np.int32(2005), np.int32(2006), np.int32(2007), np.int32(2008), np.int32(2009), np.int32(2010), np.int32(2011), np.int32(2012), np.int32(2013), np.int32(2014), np.int32(2015), np.int32(2016), np.int32(2017), np.int32(2018), np.int32(2019), np.int32(2020), np.int32(2021)]\n",
+      "Year\n",
+      "1995    12\n",
+      "1996    12\n",
+      "1997    12\n",
+      "1998    12\n",
+      "1999    12\n",
+      "2000    12\n",
+      "2001    12\n",
+      "2002    12\n",
+      "2003    12\n",
+      "2004    12\n",
+      "2005    12\n",
+      "2006    12\n",
+      "2007    12\n",
+      "2008    12\n",
+      "2009    12\n",
+      "2010    12\n",
+      "2011    12\n",
+      "2012    12\n",
+      "2013    12\n",
+      "2014    12\n",
+      "2015    12\n",
+      "2016    12\n",
+      "2017    12\n",
+      "2018    12\n",
+      "2019    12\n",
+      "2020    12\n",
+      "2021    12\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "''' Drop Unneeded Columns and Rename Needed Columns if Needed'''\n",
-    "fueleconomy = fueleconomy.iloc[:, :6]\n",
-    "registrations = registrations.iloc[:, :4]\n",
-    "consumption = consumption.iloc[:, :2]\n",
-    "consumption.columns = [\"Date\", \"Gasoline_Consumption(Millions of Gallons)\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "34a8885d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "''' Converting Consumption data to Years '''\n",
+    "# Convert 'Date' to Year and extract the year\n",
+    "consumption['Year'] = consumption['Date'].dt.year\n",
     "\n",
-    "# convert consumption tp yearly and sum up values\n",
-    "consumption = consumption.rename(columns = {'Date' : 'Year'})\n",
-    "consumption = (consumption.groupby('Year', as_index=False)['Gasoline_Consumption(Millions of Gallons)']).sum()"
+    "# Check which years are present and how many rows per year\n",
+    "print(sorted(consumption['Year'].unique()))\n",
+    "print(consumption['Year'].value_counts().sort_index())\n",
+    "\n",
+    "# Group by Year and sum the gasoline consumption\n",
+    "annual_consumption = (\n",
+    "    consumption\n",
+    "    .groupby('Year', as_index=False)['Gasoline_Consumption(Millions of Gallons)']\n",
+    "    .sum()\n",
+    "    .rename(\n",
+    "        columns={\n",
+    "            'Gasoline_Consumption(Millions of Gallons)':\n",
+    "            'AnnualConsumption (Millions of Gallons)'\n",
+    "        }\n",
+    "    )\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c41520f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "6c163ed8",
    "metadata": {},
    "outputs": [
@@ -149,14 +187,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 324 entries, 0 to 323\n",
-      "Data columns (total 2 columns):\n",
+      "Index: 324 entries, 600 to 923\n",
+      "Data columns (total 3 columns):\n",
       " #   Column                                     Non-Null Count  Dtype         \n",
       "---  ------                                     --------------  -----         \n",
-      " 0   Year                                       324 non-null    datetime64[ns]\n",
+      " 0   Date                                       324 non-null    datetime64[ns]\n",
       " 1   Gasoline_Consumption(Millions of Gallons)  324 non-null    float64       \n",
-      "dtypes: datetime64[ns](1), float64(1)\n",
-      "memory usage: 5.2 KB\n",
+      " 2   Year                                       324 non-null    int32         \n",
+      "dtypes: datetime64[ns](1), float64(1), int32(1)\n",
+      "memory usage: 8.9 KB\n",
       "\n",
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
@@ -214,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "id": "0ac8d351",
    "metadata": {},
    "outputs": [
@@ -222,41 +261,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Year  Gasoline_Consumption(Millions of Gallons)    Car  Car SUV  \\\n",
-      "17 2012-01-01                                  10663.926  27.60    23.29   \n",
-      "18 2013-01-01                                  10847.088  28.36    24.34   \n",
-      "19 2014-01-01                                  10772.034  28.39    24.44   \n",
-      "20 2015-01-01                                  11248.104  29.01    25.14   \n",
-      "21 2016-01-01                                  11266.584  29.21    26.21   \n",
-      "22 2017-01-01                                  11075.736  30.18    26.14   \n",
-      "23 2018-01-01                                  11441.430  30.76    27.33   \n",
-      "24 2019-01-01                                  11429.460  30.88    27.49   \n",
-      "25 2020-01-01                                  11358.060  31.73    28.38   \n",
-      "26 2021-01-01                                  10055.766  31.73    30.50   \n",
-      "\n",
-      "    Pickup truck    Van  Truck SUV  Automobile_Registrations  \\\n",
-      "17         17.21  21.27      20.01              1.112899e+08   \n",
-      "18         17.47  21.06      20.83              1.136763e+08   \n",
-      "19         18.04  21.27      21.59              1.138988e+08   \n",
-      "20         18.81  21.78      21.94              1.128642e+08   \n",
-      "21         18.92  21.66      22.21              1.129613e+08   \n",
-      "22         18.92  22.23      22.34              1.111770e+08   \n",
-      "23         19.11  22.76      23.13              1.112421e+08   \n",
-      "24         19.03  22.43      23.48              1.085477e+08   \n",
-      "25         19.19  23.35      23.75              1.051353e+08   \n",
-      "26         19.40  26.21      24.00              1.029739e+08   \n",
-      "\n",
-      "    Motorcycle_Registrations  Licensed_Drivers  \n",
-      "17                8454939.00      2.118148e+08  \n",
-      "18                8404687.00      2.121597e+08  \n",
-      "19                8417717.50      2.140925e+08  \n",
-      "20                8600936.00      2.180845e+08  \n",
-      "21                8679380.00      2.219944e+08  \n",
-      "22                8664108.00      2.253463e+08  \n",
-      "23                8659741.13      2.275584e+08  \n",
-      "24                8596313.89      2.286797e+08  \n",
-      "25                8347435.00      2.281958e+08  \n",
-      "26                9881414.00      2.327818e+08  \n"
+      "Empty DataFrame\n",
+      "Columns: [Date, Gasoline_Consumption(Millions of Gallons), Year, Car, Car SUV, Pickup truck, Van, Truck SUV, Automobile_Registrations, Motorcycle_Registrations, Licensed_Drivers]\n",
+      "Index: []\n"
      ]
     }
    ],
