--- a/FEVRC_Analysos/ImportMerge.ipynb
+++ b/FEVRC_Analysos/ImportMerge.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "id": "ac5a3ba0",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "id": "92b4e384",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "id": "7bdab3cf",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "id": "1f5e2f9d",
    "metadata": {},
    "outputs": [
@@ -113,64 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "056df28e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[np.int32(1995), np.int32(1996), np.int32(1997), np.int32(1998), np.int32(1999), np.int32(2000), np.int32(2001), np.int32(2002), np.int32(2003), np.int32(2004), np.int32(2005), np.int32(2006), np.int32(2007), np.int32(2008), np.int32(2009), np.int32(2010), np.int32(2011), np.int32(2012), np.int32(2013), np.int32(2014), np.int32(2015), np.int32(2016), np.int32(2017), np.int32(2018), np.int32(2019), np.int32(2020), np.int32(2021)]\n",
-      "Year\n",
-      "1995    12\n",
-      "1996    12\n",
-      "1997    12\n",
-      "1998    12\n",
-      "1999    12\n",
-      "2000    12\n",
-      "2001    12\n",
-      "2002    12\n",
-      "2003    12\n",
-      "2004    12\n",
-      "2005    12\n",
-      "2006    12\n",
-      "2007    12\n",
-      "2008    12\n",
-      "2009    12\n",
-      "2010    12\n",
-      "2011    12\n",
-      "2012    12\n",
-      "2013    12\n",
-      "2014    12\n",
-      "2015    12\n",
-      "2016    12\n",
-      "2017    12\n",
-      "2018    12\n",
-      "2019    12\n",
-      "2020    12\n",
-      "2021    12\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert 'Date' to Year and extract the year\n",
     "consumption['Year'] = consumption['Date'].dt.year\n",
     "\n",
-    "# Check which years are present and how many rows per year\n",
-    "print(sorted(consumption['Year'].unique()))\n",
-    "print(consumption['Year'].value_counts().sort_index())\n",
-    "\n",
     "# Group by Year and sum the gasoline consumption\n",
-    "annual_consumption = (\n",
+    "consumption = (\n",
     "    consumption\n",
     "    .groupby('Year', as_index=False)['Gasoline_Consumption(Millions of Gallons)']\n",
     "    .sum()\n",
     "    .rename(\n",
     "        columns={\n",
     "            'Gasoline_Consumption(Millions of Gallons)':\n",
-    "            'AnnualConsumption (Millions of Gallons)'\n",
+    "            'AnnualConsumption(Millions of Gallons)'\n",
     "        }\n",
     "    )\n",
     ")"
@@ -178,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "id": "6c163ed8",
    "metadata": {},
    "outputs": [
@@ -187,15 +146,14 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 324 entries, 600 to 923\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column                                     Non-Null Count  Dtype         \n",
-      "---  ------                                     --------------  -----         \n",
-      " 0   Date                                       324 non-null    datetime64[ns]\n",
-      " 1   Gasoline_Consumption(Millions of Gallons)  324 non-null    float64       \n",
-      " 2   Year                                       324 non-null    int32         \n",
-      "dtypes: datetime64[ns](1), float64(1), int32(1)\n",
-      "memory usage: 8.9 KB\n",
+      "RangeIndex: 27 entries, 0 to 26\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column                                  Non-Null Count  Dtype  \n",
+      "---  ------                                  --------------  -----  \n",
+      " 0   Year                                    27 non-null     int32  \n",
+      " 1   AnnualConsumption(Millions of Gallons)  27 non-null     float64\n",
+      "dtypes: float64(1), int32(1)\n",
+      "memory usage: 456.0 bytes\n",
       "\n",
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
@@ -253,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "id": "0ac8d351",
    "metadata": {},
    "outputs": [
@@ -262,7 +220,7 @@
      "output_type": "stream",
      "text": [
       "Empty DataFrame\n",
-      "Columns: [Date, Gasoline_Consumption(Millions of Gallons), Year, Car, Car SUV, Pickup truck, Van, Truck SUV, Automobile_Registrations, Motorcycle_Registrations, Licensed_Drivers]\n",
+      "Columns: [Year, AnnualConsumption(Millions of Gallons), Car, Car SUV, Pickup truck, Van, Truck SUV, Automobile_Registrations, Motorcycle_Registrations, Licensed_Drivers]\n",
       "Index: []\n"
      ]
     }
