match ImportMerge FEVRC to CoLab

--- a/FEVRC_Analysos/ImportMerge.ipynb
+++ b/FEVRC_Analysos/ImportMerge.ipynb
@@ -29,14 +29,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "92b4e384",
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''Connects to Google Drive to load in data'''\n",
+    "\n",
+    "# '''\n",
+    "# Connect to and mount Google Drive\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "# Find the dataset in google drive and assign path to variable called 'Match'\n",
+    "fueleconomy = glob.glob('/content/drive/MyDrive/**/cleanedfueleconomy.pkl', recursive=True)\n",
+    "registrations = glob.glob('/content/drive/MyDrive/**/cleanedregistrations.pkl', recursive=True)\n",
+    "consumption = glob.glob('/content/drive/MyDrive/**/cleanedconsumption.pkl', recursive=True)\n",
+    "print(\"Found paths:\", fueleconomy, registrations, consumption)\n",
+    "\n",
+    "# Using 'Match' load in the dataset using the path and skip the first 2 rows\n",
+    "path = fueleconomy[0]\n",
+    "fueleconomy = pd.read_pickle(path)\n",
+    "path = registrations[0]\n",
+    "registrations = pd.read_pickle(path)\n",
+    "path = consumption[0]\n",
+    "consumption = pd.read_pickle(path)\n",
+    "# '''\n",
+    "\n",
+    "'''\n",
     "fueleconomy = pd.read_pickle(\"../FuelEconomy/cleanedfueleconomy.pkl\")\n",
     "registrations = pd.read_pickle(\"../VehicleRegistrations/cleanedregistrations.pkl\")\n",
-    "consumption = pd.read_pickle(\"../FuelConsumption/cleanedconsumption.pkl\")"
+    "consumption = pd.read_pickle(\"../ConsumptionData/cleanedconsumption.pkl\")\n",
+    "'''"
    ]
   },
   {
@@ -211,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "0ac8d351",
    "metadata": {},
    "outputs": [
@@ -219,57 +243,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [Year, AnnualConsumption(Millions of Gallons), Car, Car SUV, Pickup truck, Van, Truck SUV, Automobile_Registrations, Motorcycle_Registrations, Licensed_Drivers]\n",
-      "Index: []\n"
+      "        Year  Car  Car SUV  Pickup truck  Van  Truck SUV  \\\n",
+      "0 1970-01-01  NaN      NaN           NaN  NaN        NaN   \n",
+      "1 1970-01-01  NaN      NaN           NaN  NaN        NaN   \n",
+      "2 1970-01-01  NaN      NaN           NaN  NaN        NaN   \n",
+      "3 1970-01-01  NaN      NaN           NaN  NaN        NaN   \n",
+      "4 1970-01-01  NaN      NaN           NaN  NaN        NaN   \n",
+      "\n",
+      "   Automobile_Registrations  Motorcycle_Registrations  Licensed_Drivers  \\\n",
+      "0                       NaN                       NaN               NaN   \n",
+      "1                       NaN                       NaN               NaN   \n",
+      "2                       NaN                       NaN               NaN   \n",
+      "3                       NaN                       NaN               NaN   \n",
+      "4                       NaN                       NaN               NaN   \n",
+      "\n",
+      "   AnnualConsumption(Millions of Gallons)  \n",
+      "0                              119399.952  \n",
+      "1                              121294.068  \n",
+      "2                              122898.216  \n",
+      "3                              126524.832  \n",
+      "4                              129244.122  \n"
      ]
     }
    ],
-   "source": [
-    "''' Merge consumption and prices data on Date '''\n",
-    "\n",
-    "# Normalize and align Date columns just in case\n",
-    "consumption[\"Year\"] = pd.to_datetime(consumption[\"Year\"]).dt.tz_localize(None).dt.normalize()\n",
-    "fueleconomy[\"Year\"] = pd.to_datetime(fueleconomy[\"Year\"]).dt.tz_localize(None).dt.normalize()\n",
-    "registrations[\"Year\"] = pd.to_datetime(registrations[\"Year\"]).dt.tz_localize(None).dt.normalize()\n",
-    "\n",
-    "# Merge consumption and fueleconomy data\n",
-    "merged_df = pd.merge(consumption, fueleconomy, on=\"Year\", how=\"inner\")\n",
-    "merged_df = pd.merge(merged_df, registrations, on=\"Year\", how=\"inner\")\n",
-    "\n",
-    "# ------^  edited ^------#\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "# Keep only relevant columns\n",
-    "merged_df = merged_df[[\n",
-    "    \"Date\",\n",
-    "    \"GasolinePrices\",\n",
-    "    \"DieselPrices\",\n",
-    "    \"Gasoline_Consumption(Millions of Gallons)\"\n",
-    "]]\n",
-    "\n",
-    "# Rename for clarity\n",
-    "merged_df.rename(columns={\n",
-    "    \"Dollars_Per_Gallon\": \"Nominal_Price_USD\",\n",
-    "    \"price_adjusted\": \"Inflation_Adjusted_Price_USD\"\n",
-    "}, inplace=True)\n",
-    "\n",
-    "# Round values for cleaner display\n",
-    "merged_df[\"Nominal_Price_USD\"] = merged_df[\"Nominal_Price_USD\"].round(3)\n",
-    "merged_df[\"Inflation_Adjusted_Price_USD\"] = merged_df[\"Inflation_Adjusted_Price_USD\"].round(3)\n",
-    "\n",
-    "# Add time breakdowns\n",
-    "merged_df[\"Year\"] = merged_df[\"Date\"].dt.year\n",
-    "merged_df[\"Month\"] = merged_df[\"Date\"].dt.month_name()\n",
-    "\n",
-    "'''\n",
-    "\n",
-    "# Verify output\n",
-    "print(merged_df.tail(10))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
