--- a/FuelConsumption/ConsumptionData.ipynb
+++ b/FuelConsumption/ConsumptionData.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {
     "executionInfo": {
      "elapsed": 49,
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -126,7 +126,7 @@
          "type": "float"
         }
        ],
-       "ref": "68674ddd-36fc-496d-9a4f-408a56263f45",
+       "ref": "deb80f9c-8abc-4ea4-9c64-5b014d5cbe1e",
        "rows": [
         [
          "0",
@@ -318,7 +318,7 @@
        "4                                                NaN                                   "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {
     "executionInfo": {
      "elapsed": 16,
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -406,7 +406,7 @@
          "type": "integer"
         }
        ],
-       "ref": "fb75f64a-a2e4-42b0-8fd3-364f2dd00c47",
+       "ref": "fc0f538e-2a7d-43b8-a050-e32de81a6a28",
        "rows": [
         [
          "Date",
@@ -453,7 +453,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -561,7 +561,7 @@
          "type": "float"
         }
        ],
-       "ref": "c954b3b3-4f70-4bff-b111-c4d8c09b2287",
+       "ref": "acb78db9-fc93-4e76-a889-96de0883716c",
        "rows": [
         [
          "600",
@@ -711,7 +711,7 @@
        "609 1995-10-01                                  10130.694"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -795,7 +795,7 @@
          "type": "float"
         }
        ],
-       "ref": "1d348835-5412-47dc-af8a-d61caba73b1a",
+       "ref": "7d952a12-5df0-474e-a594-c824d829bbf7",
        "rows": [
         [
          "count",
@@ -933,7 +933,7 @@
        "std                                   803.788992  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2022,7 +2022,7 @@
          "type": "float"
         }
        ],
-       "ref": "ae52d16c-617a-4c12-8b1c-ada5d3c04365",
+       "ref": "efe777cd-f67b-4f99-a8b2-80e2a0b52477",
        "rows": [
         [
          "601",
@@ -2968,7 +2968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4204,7 +4204,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Date",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
+        },
+        {
+         "name": "Gasoline_Consumption(Millions of Gallons)",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Z_Consumption",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "9b321024-3263-47cc-8546-4bf8f7f56786",
+       "rows": [
+        [
+         "600",
+         "1995-01-01 00:00:00",
+         "9326.478",
+         "-2.38995347681846"
+        ],
+        [
+         "601",
+         "1995-02-01 00:00:00",
+         "8797.362",
+         "-3.0482307177371646"
+        ],
+        [
+         "602",
+         "1995-03-01 00:00:00",
+         "10139.346",
+         "-1.378658214019555"
+        ],
+        [
+         "603",
+         "1995-04-01 00:00:00",
+         "9640.68",
+         "-1.9990523782859277"
+        ],
+        [
+         "604",
+         "1995-05-01 00:00:00",
+         "10277.652",
+         "-1.2065906672386928"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Gasoline_Consumption(Millions of Gallons)</th>\n",
+       "      <th>Z_Consumption</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>600</th>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>9326.478</td>\n",
+       "      <td>-2.389953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>601</th>\n",
+       "      <td>1995-02-01</td>\n",
+       "      <td>8797.362</td>\n",
+       "      <td>-3.048231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602</th>\n",
+       "      <td>1995-03-01</td>\n",
+       "      <td>10139.346</td>\n",
+       "      <td>-1.378658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>603</th>\n",
+       "      <td>1995-04-01</td>\n",
+       "      <td>9640.680</td>\n",
+       "      <td>-1.999052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>604</th>\n",
+       "      <td>1995-05-01</td>\n",
+       "      <td>10277.652</td>\n",
+       "      <td>-1.206591</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date  Gasoline_Consumption(Millions of Gallons)  Z_Consumption\n",
+       "600 1995-01-01                                   9326.478      -2.389953\n",
+       "601 1995-02-01                                   8797.362      -3.048231\n",
+       "602 1995-03-01                                  10139.346      -1.378658\n",
+       "603 1995-04-01                                   9640.680      -1.999052\n",
+       "604 1995-05-01                                  10277.652      -1.206591"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "consumption.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4291,7 +4443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {
     "executionInfo": {
      "elapsed": 1,
