--- a/FEVRC_Analysis/FEVRC_Notebook.ipynb
+++ b/FEVRC_Analysis/FEVRC_Notebook.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "ac5a3ba0",
    "metadata": {
     "executionInfo": {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "92b4e384",
    "metadata": {
     "colab": {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "6c163ed8",
    "metadata": {
     "colab": {
@@ -147,10 +147,10 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 27 entries, 0 to 26\n",
       "Data columns (total 2 columns):\n",
-      " #   Column                                     Non-Null Count  Dtype  \n",
-      "---  ------                                     --------------  -----  \n",
-      " 0   Year                                       27 non-null     int64  \n",
-      " 1   Gasoline_Consumption(Millions of Gallons)  27 non-null     float64\n",
+      " #   Column                                  Non-Null Count  Dtype  \n",
+      "---  ------                                  --------------  -----  \n",
+      " 0   Year                                    27 non-null     int64  \n",
+      " 1   AnnualConsumption(Millions of Gallons)  27 non-null     float64\n",
       "dtypes: float64(1), int64(1)\n",
       "memory usage: 564.0 bytes\n",
       "\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "0ac8d351",
    "metadata": {
     "colab": {
@@ -292,12 +292,12 @@
          "type": "float"
         },
         {
-         "name": "Gasoline_Consumption(Millions of Gallons)",
+         "name": "AnnualConsumption(Millions of Gallons)",
          "rawType": "float64",
          "type": "float"
         }
        ],
-       "ref": "277b6a09-ab3f-4ab7-93c2-bedf2962b294",
+       "ref": "4fd9d7ab-eb61-4902-8bd4-9ffb9e0a7fb2",
        "rows": [
         [
          "0",
@@ -740,7 +740,7 @@
        "      <th>Motorcycle_Registrations</th>\n",
        "      <th>Licensed_Drivers</th>\n",
        "      <th>TotalRegistrations</th>\n",
-       "      <th>Gasoline_Consumption(Millions of Gallons)</th>\n",
+       "      <th>AnnualConsumption(Millions of Gallons)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1212,37 +1212,37 @@
        "25              1.051353e+08                8347435.00      2.281958e+08   \n",
        "26              1.029739e+08                9881414.00      2.327818e+08   \n",
        "\n",
-       "    TotalRegistrations  Gasoline_Consumption(Millions of Gallons)  \n",
-       "0          139833074.0                                   119400.0  \n",
-       "1          133599578.0                                   121294.0  \n",
-       "2          133575077.0                                   122898.0  \n",
-       "3          135717988.0                                   126525.0  \n",
-       "4          136584477.0                                   129244.0  \n",
-       "5          137967488.0                                   130233.0  \n",
-       "6          142536523.0                                   131992.0  \n",
-       "7          140924833.0                                   135637.0  \n",
-       "8          141039932.0                                   136972.0  \n",
-       "9          142211521.0                                   139968.0  \n",
-       "10         142795229.0                                   140412.0  \n",
-       "11         142078903.0                                   141841.0  \n",
-       "12         143071406.0                                   142349.0  \n",
-       "13         144832769.0                                   138182.0  \n",
-       "14         142809324.0                                   137917.0  \n",
-       "15         138901743.0                                   137857.0  \n",
-       "16         134094030.0                                   134180.0  \n",
-       "17         119744845.0                                   133463.0  \n",
-       "18         122081032.0                                   135563.0  \n",
-       "19         122316562.0                                   136757.0  \n",
-       "20         121465164.0                                   140704.0  \n",
-       "21         121640646.0                                   143222.0  \n",
-       "22         119841137.0                                   142976.0  \n",
-       "23         119901873.0                                   143013.0  \n",
-       "24         117144024.0                                   142712.0  \n",
-       "25         113482735.0                                   123733.0  \n",
-       "26         112855295.0                                   135145.0  "
+       "    TotalRegistrations  AnnualConsumption(Millions of Gallons)  \n",
+       "0          139833074.0                                119400.0  \n",
+       "1          133599578.0                                121294.0  \n",
+       "2          133575077.0                                122898.0  \n",
+       "3          135717988.0                                126525.0  \n",
+       "4          136584477.0                                129244.0  \n",
+       "5          137967488.0                                130233.0  \n",
+       "6          142536523.0                                131992.0  \n",
+       "7          140924833.0                                135637.0  \n",
+       "8          141039932.0                                136972.0  \n",
+       "9          142211521.0                                139968.0  \n",
+       "10         142795229.0                                140412.0  \n",
+       "11         142078903.0                                141841.0  \n",
+       "12         143071406.0                                142349.0  \n",
+       "13         144832769.0                                138182.0  \n",
+       "14         142809324.0                                137917.0  \n",
+       "15         138901743.0                                137857.0  \n",
+       "16         134094030.0                                134180.0  \n",
+       "17         119744845.0                                133463.0  \n",
+       "18         122081032.0                                135563.0  \n",
+       "19         122316562.0                                136757.0  \n",
+       "20         121465164.0                                140704.0  \n",
+       "21         121640646.0                                143222.0  \n",
+       "22         119841137.0                                142976.0  \n",
+       "23         119901873.0                                143013.0  \n",
+       "24         117144024.0                                142712.0  \n",
+       "25         113482735.0                                123733.0  \n",
+       "26         112855295.0                                135145.0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "HWimU-K1niAM",
    "metadata": {
     "executionInfo": {
